--- a/Blazor_StateManagement/Shared/NavMenu.razor
+++ b/Blazor_StateManagement/Shared/NavMenu.razor
@@ -14,16 +14,31 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+       <li class="nav-item px-3">
+            <NavLink class="nav-link" href="CategorySenderComponent">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Category 
             </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ProductReceiveComponent">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Product 
             </NavLink>
-        </div>
+        </li>
+         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="AddCategoryPage">
+                <span class="oi plus" aria-hidden="true"></span> Add Category
+            </NavLink>
+        </li>
+         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="AddProductPage">
+                <span class="oi plus" aria-hidden="true"></span> Add Product
+            </NavLink>
+        </li>
+         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="FromState">
+                <span class="oi plus" aria-hidden="true"></span> From State
+            </NavLink>
+        </li>
     </nav>
 </div>
 
