--- a/Blazor_StateManagement/Shared/NavMenu.razor
+++ b/Blazor_StateManagement/Shared/NavMenu.razor
@@ -35,8 +35,8 @@
             </NavLink>
         </li>
          <li class="nav-item px-3">
-            <NavLink class="nav-link" href="FromState">
-                <span class="oi plus" aria-hidden="true"></span> From State
+            <NavLink class="nav-link" href="FormState">
+                <span class="plus" aria-hidden="true"></span> Form State
             </NavLink>
         </li>
     </nav>
