--- a/Blazor_StateManagement/_Imports.razor
+++ b/Blazor_StateManagement/_Imports.razor
@@ -8,7 +8,6 @@
 @using Microsoft.JSInterop
 @using Blazor_StateManagement
 @using Blazor_StateManagement.Shared
-@using Blazor_StateManagement.Components
 @using Blazor_StateManagement.Data
 @using Blazor_StateManagement.Models
-@using Blazor_StateManagement.ViewModels
+@using Blazor_StateManagement.StateObjects
